--- a/Project-ballons/index.html
+++ b/Project-ballons/index.html
@@ -31,7 +31,7 @@
         </div>
 
         <header class="header">
-            <img class="header__logo" src="icons/Icon-logo.svg" alt="Логотип воздушный шар">
+            <img class="header__logo" src="./icons/Icon-logo.svg" alt="Логотип воздушный шар">
             <div class="header__box">
                 <h1 class="title-first">
                     <span class="title-first__main">ТУРЫ НА ВОЗДУШНОМ ШАРЕ</span>
@@ -62,9 +62,9 @@
 
                     <div class="col-1-of-2">
                         <div class="composition">
-                            <img src="img/photo-ballons-1.png" alt="Photo-ballons-1" class="composition__photo composition__photo_n1">
-                            <img src="img/photo-ballons-2.png" alt="Photo-ballons-2" class="composition__photo composition__photo_n2">
-                            <img src="img/photo-ballons-3.png" alt="Photo-ballons-3" class="composition__photo composition__photo_n3">
+                            <img src="./img/photo-ballons-1.png" alt="Photo-ballons-1" class="composition__photo composition__photo_n1">
+                            <img src="./img/photo-ballons-2.png" alt="Photo-ballons-2" class="composition__photo composition__photo_n2">
+                            <img src="./img/photo-ballons-3.png" alt="Photo-ballons-3" class="composition__photo composition__photo_n3">
                         </div>
                     </div>
                 </div>
@@ -204,8 +204,8 @@
             <section class="section-feedBack">
                 <div class="bg-gradient"></div>
                 <video class="bg-video" autoplay muted loop>
-                    <source src="img/Hot air balloons-1.mp4">
-                    <source src="img/Hot air balloons-2.webm">
+                    <source src="./img/Hot air balloons-1.mp4">
+                    <source src="./img/Hot air balloons-2.webm">
                 </video>
 
 
@@ -217,7 +217,7 @@
                 <div class="row">
                     <div class="feedBack-card">
                         <figure class="feedBack-card__img">
-                            <img src="img/feedBack-1.jpg" alt="persone">
+                            <img src="./img/feedBack-1.jpg" alt="persone">
                             <figcaption class="feedBack-card__name">ЛИЗА
                                 ФРОЛОВА</figcaption>
                         </figure>
@@ -232,7 +232,7 @@
                 <div class="row">
                     <div class="feedBack-card">
                         <figure class="feedBack-card__img">
-                            <img src="img/feedBack-2.jpg" alt="persone">
+                            <img src="./img/feedBack-2.jpg" alt="persone">
                             <figcaption class="feedBack-card__name">АНТОН
                                 РЯБИН</figcaption>
                         </figure>
@@ -296,7 +296,7 @@
         <footer class="footer">
             <div class="row text-align-center">
                 <a href="#">
-                    <img src="icons/Icon-logo.svg" alt="logo" class="footer__logo">
+                    <img src="./icons/Icon-logo.svg" alt="logo" class="footer__logo">
                 </a>
             </div>
             <div class="row">
@@ -311,78 +311,6 @@
         </footer>
         
     </div>
-
-
-
-  <!--  <section class="grid-test">
-        <div class="row">
-            <div class="col-1-of-2">
-                col-1-of-2
-            </div>
-            <div class="col-1-of-2">
-                col-1-of-2
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-1-of-3">
-                col-1-of-3
-            </div>
-            <div class="col-1-of-3">
-                col-1-of-3
-            </div>
-            <div class="col-1-of-3">
-                col-1-of-3
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-1-of-3">
-                col-1-of-3
-            </div>
-            <div class="col-2-of-3">
-                col-2-of-3
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-1-of-4">
-                col-1-of-4
-            </div>
-            <div class="col-1-of-4">
-                col-1-of-4
-            </div>
-            <div class="col-1-of-4">
-                col-1-of-4
-            </div>
-            <div class="col-1-of-4">
-                col-1-of-4
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-1-of-4">
-                col-1-of-4
-            </div>
-            <div class="col-1-of-4">
-                col-1-of-4
-            </div>
-            <div class="col-2-of-4">
-                col-2-of-4
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-1-of-4">
-                col-1-of-4
-            </div>
-            <div class="col-3-of-4">
-                col-3-of-4
-            </div>
-        </div>
-
-
-   </section> -->
     
 </body>
 </html>
